blackbookreadprofileservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blackbookreadprofile-deployment
  labels:
    app: blackbookreadprofile
spec:
  selector:
    matchLabels:
      app: blackbookreadprofile
  template:
    metadata:
      labels:
        app: blackbookreadprofile
    spec:
      containers:
      - name: blackbookreadprofile
        image: docker.io/rlkamradt/blackbook-read-profile:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: blackbookreadprofile-service
spec:
  type: ClusterIP
  selector:
    app: blackbookreadprofile
  ports:
  - port: 8080
    targetPort: 3000
