vhost-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: blackbook-ingress
  annotations:
    cert-manager.io/issuer: ca-issuer 
spec:
  rules:
  - host: blackbook.local
    http:
      paths:
      - backend:
          serviceName: blackbook-service
          servicePort: 8080
        path: /
  tls:
  - hosts:
    - blackbook.local
    secretName: blackbook-cert
